# backend-pixcode

./: .env-example  README.md  pyproject.toml
src/core/pix/application/service/: generate_pix_qrcode.py
src/core/pix/model/: entity.py  object_values.py
src/core/qrcode/model/: entity.py
src/fastapi/app/: main.py
